fetch external api

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,7 +18,7 @@
             Logo
         </div>
         <div class="">
-            navigation
+            Enter a valid url (without trailing /) then press submit
         </div>
     </header>
 
@@ -31,9 +31,16 @@
             </form>
         </section>
 
-        <section>
+        <section id="resultSection" class="hidden">
             <strong>Form Results:</strong>
-            <div id="results"></div>
+            <div>score tag :</div>>
+            <div id="score_tag"></div>
+            <div>Agreement :</div>>
+            <div id="agreement"></div>
+            <div>Subjectivity :</div>>
+            <div id="subjectivity"></div>
+            <div>Confidence :</div>>
+            <div id="confidence"></div>
         </section>
     </main>
 
